--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -fno-diagnostics-color")
 catkin_package(
   INCLUDE_DIRS include
   CATKIN_DEPENDS roscpp sensor_msgs std_msgs geometry_msgs mrs_msgs 
-  LIBRARIES TrackersManager
+  LIBRARIES ControlManager
   )
 
 ###########
@@ -40,15 +40,15 @@ include_directories(
   )
 
 # Declare a C++ executable
-add_library(TrackersManager src/trackers_manager.cpp)
+add_library(ControlManager src/control_manager.cpp)
 
-add_dependencies(TrackersManager
+add_dependencies(ControlManager
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(TrackersManager
+target_link_libraries(ControlManager
   ${catkin_LIBRARIES}
   )
 
