--- a/package.xml
+++ b/package.xml
@@ -34,7 +34,7 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <nodelet plugin="${prefix}/trackers_manager.xml" />
+    <nodelet plugin="${prefix}/control_manager.xml" />
     <mrs_mav_manager plugin="${prefix}/null_tracker.xml" />
   </export>
 
