--- a/config/control_manager.yaml
+++ b/config/control_manager.yaml
@@ -2,6 +2,7 @@
 # - trackers follow the mrs_uav_manager/Tracker.h interface
 trackers : [
   "mrs_trackers/LinearTracker",
+  "mrs_trackers/MpcTracker",
 ]
 
 # - list of names of dynamically loaded controllers
