--- a/config/mav_manager.yaml
+++ b/config/mav_manager.yaml
@@ -3,4 +3,5 @@ null_tracker: "mrs_mav_manager/NullTracker"
 landoff:
   takeoff_tracker: "mrs_trackers/LandoffTracker"
   landing_tracker: "mrs_trackers/LandoffTracker"
-  landing_cutoff_height:  0.3
+  landing_cutoff_height:  0.35
+  landing_cutoff_speed:  0.1
