--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
   <build_depend>cmake_modules</build_depend>
   <build_depend>mrs_msgs</build_depend>
   <build_depend>nodelet</build_depend>
+  <build_depend>mrs_lib</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -29,6 +30,7 @@
   <run_depend>cmake_modules</run_depend>
   <run_depend>mrs_msgs</run_depend>
   <run_depend>nodelet</run_depend>
+  <run_depend>mrs_lib</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
