--- a/package.xml
+++ b/package.xml
@@ -36,6 +36,7 @@
   <export>
     <nodelet plugin="${prefix}/control_manager.xml" />
     <nodelet plugin="${prefix}/mav_manager.xml" />
+    <nodelet plugin="${prefix}/gain_manager.xml" />
     <mrs_mav_manager plugin="${prefix}/null_tracker.xml" />
   </export>
 
