--- a/config/gain_manager.yaml
+++ b/config/gain_manager.yaml
@@ -50,7 +50,7 @@ constraint_management:
     VIO: ["slow"]
     ICP: ["slow"]
     RTK: ["slow", "medium"]
-    OPTFLOWGPS: ["slow", "medium"]
+    OPTFLOWGPS: ["slow"]
     GPS: ["slow", 'medium']
     OPTFLOW: ["slow"]
     OTHER: ["slow"]
@@ -61,7 +61,7 @@ constraint_management:
     VIO: "slow"
     ICP: "slow"
     RTK: "medium"
-    OPTFLOWGPS: "medium"
+    OPTFLOWGPS: "slow"
     GPS: "medium"
     OPTFLOW: "slow"
     OTHER: "slow"
