--- a/config/gains.yaml
+++ b/config/gains.yaml
@@ -41,3 +41,25 @@ soft:
   weight_estimator:
     km: 1.0
     km_lim: 1.0 # [kg]
+
+tight:
+
+  horizontal:
+    kp: 0.7
+    kv: 0.35
+    ka: 1.0
+
+    kib: 0.01
+    kib_lim: 0.15
+
+    kiw: 0.01
+    kiw_lim: 0.3
+
+  vertical:
+    kp: 0.6
+    kv: 0.2
+    ka: 1.0
+
+  weight_estimator:
+    km: 1.0
+    km_lim: 1.0 # [kg]
