--- a/config/mav_manager.yaml
+++ b/config/mav_manager.yaml
@@ -1,8 +1,17 @@
 null_tracker: "mrs_mav_manager/NullTracker"
 
-landoff:
+takeoff:
   rate: 10 # [Hz]
   takeoff_tracker: "mrs_trackers/LandoffTracker"
+  after_takeoff_tracker: "mrs_trackers/MpcTracker"
+
+  takeoff_height: 1.5
+
+landing:
+
+  rate: 10 # [Hz]
   landing_tracker: "mrs_trackers/LandoffTracker"
-  landing_cutoff_height:  0.1
-  landing_cutoff_speed:  -0.05
+
+  # those two must apply simultaneously
+  landing_cutoff_height:  0.4
+  landing_cutoff_mass_difference:  0.5 # [kg]
