--- a/config/control_manager.yaml
+++ b/config/control_manager.yaml
@@ -17,7 +17,11 @@ controllers : [
 # - NullTracker is defined in the mrs_uav_manager package
 null_tracker: "mrs_mav_manager/NullTracker"
 
+status_timer_rate:  10 # [Hz]
+
 safety:
+
+  timer_rate: 100 # [Hz]
 
   max_tilt_angle: 50 # [deg]
   failsafe_hover_control_error: 1.5 # [m]
