--- a/config/simulation/gain_manager.yaml
+++ b/config/simulation/gain_manager.yaml
@@ -29,7 +29,7 @@ gain_management:
     ICP: ["supersoft"]
     RTK: ["soft", "supersoft"]
     OPTFLOWGPS: ["soft", "supersoft"]
-    GPS: ["soft", 'supersoft']
+    GPS: ["soft", 'supersoft', 'tight']
     OPTFLOW: ["supersoft"]
     OTHER: ["supersoft"]
 
@@ -40,7 +40,7 @@ gain_management:
     ICP: "supersoft"
     RTK: "soft"
     OPTFLOWGPS: "soft"
-    GPS: "soft"
+    GPS: "tight"
     OPTFLOW: "supersoft"
     OTHER: "supersoft"
 
