after successful flight with the new odomeotry mode switching

--- a/config/uav/constraints.yaml
+++ b/config/uav/constraints.yaml
@@ -2,8 +2,8 @@ slow:
 
   horizontal:
     speed: 2.0
-    acceleration: 2.0
-    jerk: 2.0
+    acceleration: 1.5
+    jerk: 1.0
 
   vertical:
 
@@ -25,14 +25,38 @@ slow:
 medium:
 
   horizontal:
-    speed: 4.0
+    speed: 3.0
     acceleration: 2.0
     jerk: 2.0
 
   vertical:
 
     ascending:
-      speed: 2.0
+      speed: 1.0
+      acceleration: 1.0
+      jerk: 2.0
+
+    descending:
+      speed: 1.0
+      acceleration: 1.0
+      jerk: 2.0
+
+  yaw:
+    speed: 0.4
+    acceleration: 0.5
+    jerk: 0.5
+
+fast:
+
+  horizontal:
+    speed: 3.5
+    acceleration: 2.0
+    jerk: 2.0
+
+  vertical:
+
+    ascending:
+      speed: 1.0
       acceleration: 1.0
       jerk: 2.0
 
