added headless mode to mpc

--- a/config/simulation/gain_manager.yaml
+++ b/config/simulation/gain_manager.yaml
@@ -40,7 +40,7 @@ gain_management:
     ICP: "supersoft"
     RTK: "soft"
     OPTFLOWGPS: "soft"
-    GPS: "tight"
+    GPS: "soft"
     OPTFLOW: "supersoft"
     OTHER: "supersoft"
 
