--- a/config/simulation/gains.yaml
+++ b/config/simulation/gains.yaml
@@ -18,7 +18,7 @@ supersoft:
 
   weight_estimator:
     km: 1.0
-    km_lim: 1.0
+    km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
 soft:
 
@@ -40,7 +40,7 @@ soft:
 
   weight_estimator:
     km: 1.0
-    km_lim: 1.0 # [kg]
+    km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
 tight:
 
@@ -62,4 +62,4 @@ tight:
 
   weight_estimator:
     km: 1.0
-    km_lim: 1.0 # [kg]
+    km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection] 
