--- a/config/control_manager.yaml
+++ b/config/control_manager.yaml
@@ -4,6 +4,7 @@ trackers : [
   "mrs_trackers/LandoffTracker",
   "mrs_trackers/LineTracker",
   "mrs_trackers/MpcTracker",
+  "mrs_trackers/JoyTracker",
 ]
 
 # - list of names of dynamically loaded controllers
@@ -12,6 +13,7 @@ controllers : [
   "mrs_controllers/NsfController",
   "mrs_controllers/So3Controller",
   "mrs_controllers/FailsafeController",
+  "mrs_controllers/AttitudeController",
 ]
 
 # - this is the "do nothing tracker", which is active when no other is
