--- a/config/simulation/constraints.yaml
+++ b/config/simulation/constraints.yaml
@@ -81,3 +81,31 @@ fast:
     acceleration: 2.0
     jerk: 3.0
     snap: 5.0
+
+insane:
+
+  horizontal:
+    speed: 8.3
+    acceleration: 3.0
+    jerk: 3.0
+    snap: 5.0
+
+  vertical:
+
+    ascending:
+      speed: 2.0
+      acceleration: 1.0
+      jerk: 3.0
+      snap: 5.0
+
+    descending:
+      speed: 30.0
+      acceleration: 20.0
+      jerk: 10.0
+      snap: 10.0
+
+  yaw:
+    speed: 2.0
+    acceleration: 2.0
+    jerk: 3.0
+    snap: 5.0
