--- a/package.xml
+++ b/package.xml
@@ -37,6 +37,7 @@
     <nodelet plugin="${prefix}/control_manager.xml" />
     <nodelet plugin="${prefix}/mav_manager.xml" />
     <nodelet plugin="${prefix}/gain_manager.xml" />
+    <nodelet plugin="${prefix}/constraint_manager.xml" />
     <mrs_mav_manager plugin="${prefix}/null_tracker.xml" />
   </export>
 
