fixed so(3) thrust race

--- a/config/simulation/constraint_manager.yaml
+++ b/config/simulation/constraint_manager.yaml
@@ -37,8 +37,8 @@ constraint_management:
     OBJECT: "slow"
     VIO: "slow"
     ICP: "slow"
-    RTK: "insane"
+    RTK: "fast"
     OPTFLOWGPS: "slow"
-    GPS: "insane"
+    GPS: "fast"
     OPTFLOW: "slow"
     OTHER: "slow"
