--- a/config/simulation/constraint_manager/constraints.yaml
+++ b/config/simulation/constraint_manager/constraints.yaml
@@ -4,6 +4,7 @@ slow:
     speed: 2.0
     acceleration: 1.0
     jerk: 1.0
+    snap: 1.0
 
   vertical:
 
@@ -11,85 +12,72 @@ slow:
       speed: 1.0
       acceleration: 1.0
       jerk: 2.0
+      snap: 2.0
 
     descending:
       speed: 1.0
       acceleration: 1.0
       jerk: 2.0
+      snap: 2.0
 
   yaw:
-    speed: 0.4
+    speed: 0.5
     acceleration: 0.5
-    jerk: 0.5
+    jerk: 3.0
+    snap: 5.0
 
 medium:
 
   horizontal:
-    speed: 3.0
+    speed: 5.0
     acceleration: 2.0
-    jerk: 2.0
+    jerk: 3.0
+    snap: 5.0
 
   vertical:
 
     ascending:
       speed: 1.0
       acceleration: 1.0
-      jerk: 2.0
+      jerk: 3.0
+      snap: 5.0
 
     descending:
       speed: 1.0
       acceleration: 1.0
-      jerk: 2.0
+      jerk: 3.0
+      snap: 5.0
 
   yaw:
-    speed: 0.4
-    acceleration: 0.5
-    jerk: 0.5
+    speed: 1.0
+    acceleration: 1.0
+    jerk: 3.0
+    snap: 5.0
 
 fast:
 
   horizontal:
-    speed: 3.5
-    acceleration: 2.0
-    jerk: 2.0
+    speed: 8.3
+    acceleration: 3.0
+    jerk: 3.0
+    snap: 5.0
 
   vertical:
 
     ascending:
-      speed: 1.0
+      speed: 2.0
       acceleration: 1.0
-      jerk: 2.0
+      jerk: 3.0
+      snap: 5.0
 
     descending:
-      speed: 1.0
+      speed: 2.0
       acceleration: 1.0
-      jerk: 2.0
+      jerk: 3.0
+      snap: 5.0
 
   yaw:
-    speed: 0.4
-    acceleration: 0.5
-    jerk: 0.5
-
-insane:
-
-  horizontal:
-    speed: 3.5
+    speed: 2.0
     acceleration: 2.0
-    jerk: 2.0
-
-  vertical:
-
-    ascending:
-      speed: 1.0
-      acceleration: 1.0
-      jerk: 2.0
-
-    descending:
-      speed: 20.0
-      acceleration: 10.0
-      jerk: 10.0
-
-  yaw:
-    speed: 0.4
-    acceleration: 0.5
-    jerk: 0.5
+    jerk: 3.0
+    snap: 5.0
