--- a/config/uav/constraint_manager/constraint_manager.yaml
+++ b/config/uav/constraint_manager/constraint_manager.yaml
@@ -15,7 +15,6 @@ constraints: [
   "slow",
   "medium",
   "fast",
-  "insane",
 ]
 
 constraint_management:
@@ -25,9 +24,9 @@ constraint_management:
     OBJECT: ["slow"]
     VIO: ["slow"]
     ICP: ["slow"]
-    RTK: ["slow", "medium", "fast", "insane"]
+    RTK: ["slow", "medium", "fast"]
     OPTFLOWGPS: ["slow"]
-    GPS: ["slow", "medium", "fast", "insane"]
+    GPS: ["slow", "medium", "fast"]
     OPTFLOW: ["slow"]
     OTHER: ["slow"]
 
