--- a/config/uav/f450/constraint_manager/constraint_manager.yaml
+++ b/config/uav/f450/constraint_manager/constraint_manager.yaml
@@ -26,7 +26,7 @@ constraint_management:
     ICP: ["slow"]
     RTK: ["slow"]
     OPTFLOWGPS: ["slow"]
-    GPS: ["slow"]
+    GPS: ["slow", "medium", "fast"]
     OPTFLOW: ["slow"]
     OTHER: ["slow"]
 
@@ -38,6 +38,6 @@ constraint_management:
     ICP: "slow"
     RTK: "slow"
     OPTFLOWGPS: "slow"
-    GPS: "slow"
+    GPS: "medium"
     OPTFLOW: "slow"
     OTHER: "slow"
