--- a/config/uav/f450/gain_manager/gain_manager.yaml
+++ b/config/uav/f450/gain_manager/gain_manager.yaml
@@ -13,8 +13,6 @@ estimator_types: [
 
 gains: [
   "supersoft",
-  "soft",
-  "tight",
 ]
 
 gain_management:
@@ -24,9 +22,9 @@ gain_management:
     OBJECT: ["supersoft"]
     VIO: ["supersoft"]
     ICP: ["supersoft"]
-    RTK: ["soft", "supersoft", "tight"]
-    OPTFLOWGPS: ["soft", "supersoft"]
-    GPS: ["soft", 'supersoft', 'tight']
+    RTK: ["supersoft"]
+    OPTFLOWGPS: ["supersoft"]
+    GPS: ["supersoft"]
     OPTFLOW: ["supersoft"]
     OTHER: ["supersoft"]
 
@@ -36,8 +34,8 @@ gain_management:
     OBJECT: "supersoft"
     VIO: "supersoft"
     ICP: "supersoft"
-    RTK: "tight"
-    OPTFLOWGPS: "soft"
-    GPS: "tight"
+    RTK: "supersoft"
+    OPTFLOWGPS: "supersoft"
+    GPS: "supersoft"
     OPTFLOW: "supersoft"
     OTHER: "supersoft"
