--- a/config/uav/f550/gain_manager/gains.yaml
+++ b/config/uav/f550/gain_manager/gains.yaml
@@ -1,18 +1,18 @@
 supersoft:
 
   horizontal:
-    kp: 5.0
-    kv: 3.0
+    kp: 6.4
+    kv: 4.0
     ka: 1.0
 
     attitude:
       kq: 6.0
       kw: 0.0
 
-    kib: 1.0
+    kib: 0.2
     kib_lim: 10.0
 
-    kiw: 1.0
+    kiw: 0.2
     kiw_lim: 10.0
 
   vertical:
@@ -21,7 +21,37 @@ supersoft:
     ka: 1.0
 
     attitude:
-      kq: 2.0
+      kq: 5.0
+      kw: 2.0
+
+  weight_estimator:
+    km: 1.0
+    km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
+
+soft:
+
+  horizontal:
+    kp: 6.4
+    kv: 4.0
+    ka: 1.0
+
+    attitude:
+      kq: 6.0
+      kw: 0.0
+
+    kib: 0.2
+    kib_lim: 10.0
+
+    kiw: 0.2
+    kiw_lim: 10.0
+
+  vertical:
+    kp: 30.0
+    kv: 16.0
+    ka: 1.0
+
+    attitude:
+      kq: 10.4
       kw: 2.0
 
   weight_estimator:
