preparing configs for naki

--- a/config/uav/eagle/mav_manager.yaml
+++ b/config/uav/eagle/mav_manager.yaml
@@ -12,6 +12,8 @@ takeoff:
 
   takeoff_height: 3.0
 
+  ground_limit_height: 1.0 # under which height the takeoff can happen
+
 landing:
 
   rate: 10 # [Hz]
