--- a/config/uav/f550/mav_manager.yaml
+++ b/config/uav/f550/mav_manager.yaml
@@ -12,6 +12,8 @@ takeoff:
 
   takeoff_height: 1.5
 
+  ground_limit_height: 0.5 # under which height the takeoff can happen
+
 landing:
 
   rate: 10 # [Hz]
