--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package>
 
-  <name>mrs_mav_manager</name>
+  <name>mrs_uav_manager</name>
   <version>1.0.0</version>
-  <description>The mrs_mav_manager package</description>
+  <description>The mrs_uav_manager package</description>
 
   <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
 
@@ -32,7 +32,7 @@
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <nodelet plugin="${prefix}/plugins.xml" />
-    <mrs_mav_manager plugin="${prefix}/null_tracker.xml" />
+    <mrs_uav_manager plugin="${prefix}/null_tracker.xml" />
   </export>
 
 </package>
