switched to medium constraints for simulation

--- a/config/simulation/constraint_manager/constraint_manager.yaml
+++ b/config/simulation/constraint_manager/constraint_manager.yaml
@@ -36,8 +36,8 @@ constraint_management:
     OBJECT: "slow"
     VIO: "slow"
     ICP: "slow"
-    RTK: "fast"
+    RTK: "medium"
     OPTFLOWGPS: "slow"
-    GPS: "fast"
+    GPS: "medium"
     OPTFLOW: "slow"
     OTHER: "slow"
