fixed launch files

--- a/config/uav/f550/constraint_manager/constraint_manager.yaml
+++ b/config/uav/f550/constraint_manager/constraint_manager.yaml
@@ -7,6 +7,8 @@ estimator_types: [
   "RTK",
   "OPTFLOWGPS",
   "GPS",
+  "GPS_GYRO",
+  "GPS_COMPASS",
   "OPTFLOW",
   "OTHER",
 ]
@@ -27,6 +29,8 @@ constraint_management:
     RTK: ["slow"]
     OPTFLOWGPS: ["slow"]
     GPS: ["slow", "medium", "fast"]
+    GPS_GYRO: ["slow", "medium", "fast"]
+    GPS_COMPASS: ["slow", "medium", "fast"]
     OPTFLOW: ["slow"]
     OTHER: ["slow"]
 
@@ -38,6 +42,8 @@ constraint_management:
     ICP: "slow"
     RTK: "slow"
     OPTFLOWGPS: "slow"
-    GPS: "fast"
+    GPS: "slow"
+    GPS_GYRO: "slow"
+    GPS_COMPASS: "slow"
     OPTFLOW: "slow"
     OTHER: "slow"
