--- a/config/uav/f550/gain_manager/gain_manager.yaml
+++ b/config/uav/f550/gain_manager/gain_manager.yaml
@@ -35,7 +35,7 @@ gain_management:
     OBJECT: "supersoft"
     VIO: "supersoft"
     ICP: "supersoft"
-    RTK: "supersoft"
+    RTK: "soft"
     OPTFLOWGPS: "supersoft"
     GPS: "soft"
     OPTFLOW: "supersoft"
