--- a/config/uav/f550/gain_manager/gains.yaml
+++ b/config/uav/f550/gain_manager/gains.yaml
@@ -57,3 +57,33 @@ soft:
   weight_estimator:
     km: 1.0
     km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
+
+tight:
+
+  horizontal:
+    kp: 3.5
+    kv: 2.0
+    ka: 1.0
+
+    attitude:
+      kq: 8.0
+      kw: 0.0
+
+    kib: 0.2
+    kib_lim: 10.0
+
+    kiw: 0.2
+    kiw_lim: 10.0
+
+  vertical:
+    kp: 8.6
+    kv: 4.3
+    ka: 1.0
+
+    attitude:
+      kq: 8.0
+      kw: 2.0
+
+  weight_estimator:
+    km: 1.0
+    km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
