--- a/config/uav/eagle/constraint_manager/constraint_manager.yaml
+++ b/config/uav/eagle/constraint_manager/constraint_manager.yaml
@@ -38,6 +38,6 @@ constraint_management:
     ICP: "slow"
     RTK: "slow"
     OPTFLOWGPS: "slow"
-    GPS: "fast"
+    GPS: "medium"
     OPTFLOW: "slow"
     OTHER: "slow"
