--- a/config/uav/eagle/gain_manager/gain_manager.yaml
+++ b/config/uav/eagle/gain_manager/gain_manager.yaml
@@ -37,6 +37,6 @@ gain_management:
     ICP: "supersoft"
     RTK: "supersoft"
     OPTFLOWGPS: "supersoft"
-    GPS: "soft"
+    GPS: "supersoft"
     OPTFLOW: "supersoft"
     OTHER: "supersoft"
