--- a/config/uav/f550/gain_manager/gain_manager.yaml
+++ b/config/uav/f550/gain_manager/gain_manager.yaml
@@ -27,7 +27,7 @@ gain_management:
     RTK: ["supersoft", "soft", "tight"]
     OPTFLOWGPS: ["supersoft"]
     GPS: ["supersoft", "soft"]
-    OPTFLOW: ["supersoft"]
+    OPTFLOW: ["supersoft", "soft", "tight"]
     OTHER: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
