removed cmake flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
   nodelet
   )
 
-# -march=native flag must be set either in all or none nodes that are linked together, otherwise segfaults due to mismatched vectorization of Eigen occur
-set(CMAKE_CXX_FLAGS "-std=c++17 -fno-diagnostics-color -O3 -march=native")
-# set(CMAKE_CXX_FLAGS "-std=c++17 -fno-diagnostics-color")
+# set(CMAKE_CXX_FLAGS "-std=c++17 -fno-diagnostics-color -O3 -march=native")
 
 ###################################
 ## catkin specific configuration ##
