--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
   nodelet
   )
 
-# set(CMAKE_CXX_FLAGS "-std=c++17 -fno-diagnostics-color -O3 -march=native")
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++17 -fno-diagnostics-color")
 
 ###################################
 ## catkin specific configuration ##
