--- a/config/uav/naki/constraint_manager/constraint_manager.yaml
+++ b/config/uav/naki/constraint_manager/constraint_manager.yaml
@@ -1,6 +1,7 @@
 rate: 25
 
 estimator_types: [
+  "T265",
   "OBJECT",
   "VIO",
   "ICP",
@@ -21,6 +22,7 @@ constraint_management:
 
   # list of allowed gains per odometry mode
   allowed_constraints:
+    T265: ["slow", "medium", "fast"]
     OBJECT: ["slow"]
     VIO: ["slow"]
     ICP: ["slow"]
@@ -33,6 +35,7 @@ constraint_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
+    T265: "slow"
     OBJECT: "slow"
     VIO: "slow"
     ICP: "slow"
