--- a/config/uav/pig/gain_manager/gain_manager.yaml
+++ b/config/uav/pig/gain_manager/gain_manager.yaml
@@ -1,6 +1,7 @@
 rate: 25
 
 estimator_types: [
+  "T265",
   "OBJECT",
   "VIO",
   "ICP",
@@ -21,6 +22,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
+    T265: ["supersoft", "soft", "tight"]
     OBJECT: ["supersoft"]
     VIO: ["supersoft"]
     ICP: ["supersoft"]
@@ -33,6 +35,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
+    T265: "supersoft"
     OBJECT: "supersoft"
     VIO: "supersoft"
     ICP: "supersoft"
