--- a/config/uav/f450/uav_manager.yaml
+++ b/config/uav/f450/uav_manager.yaml
@@ -1,5 +1,9 @@
 null_tracker: "mrs_uav_manager/NullTracker"
 
+# require gain or constraint manager runnign to takeoff?
+require_gain_manager: true
+require_constraint_manager: true
+
 max_height_checking:
 
   rate: 10 # [Hz]
