--- a/config/uav/pig/control_manager.yaml
+++ b/config/uav/pig/control_manager.yaml
@@ -27,9 +27,11 @@ safety:
   safety_timer_rate: 100 # [Hz]
   failsafe_timer_rate: 100 # [Hz]
 
-  max_tilt_angle: 45 # [deg]
-  eland_control_error: 1.0 # [m]
-  failsafe_control_error: 2.0 # [m]
+  tilt_limit_eland: 60 # [deg]
+  tilt_limit_disarm: 90 # [deg]
+
+  control_error_eland: 1.0 # [m]
+  control_error_failsafe: 2.0 # [m]
 
   # - this tracker will be used for calling the emergancy hover routine
   ehover_tracker: "mrs_trackers/LandoffTracker"
