--- a/config/simulation/control_manager.yaml
+++ b/config/simulation/control_manager.yaml
@@ -45,9 +45,14 @@ safety:
   elanding_cutoff_height:  1.0
   elanding_cutoff_mass_factor:  0.5 # how much lighter does the drone appear to be?
 
+  tilt_error_failsafe:
+
+    enabled: true
+    tilt_error_threshold: 30 # [deg]
+
 obstacle_bumper:
 
-  enabled: true
+  enabled: false
   timer_rate: 20 # [Hz]
 
   horizontal_distance: 1.0 # [m]
