--- a/config/simulation/control_manager.yaml
+++ b/config/simulation/control_manager.yaml
@@ -52,11 +52,11 @@ safety:
 
 obstacle_bumper:
 
-  enabled: false
+  enabled: true
   timer_rate: 20 # [Hz]
 
   horizontal_distance: 1.0 # [m]
-  vertical_distance: 1.0 # [m] # not used yet
+  vertical_distance: 1.0 # [m]
 
   obstacle_hugging:
 
@@ -70,7 +70,8 @@ obstacle_bumper:
     horizontal_distance: 1.0 # [m]
     horizontal_offset: 0.1 # [m] by how much to repulse from the horizontal_distance limit
 
-    vertical_distance: 1.0 # [m] # not used yet
+    vertical_distance: 1.0 # [m]
+    vertical_offset: 0.1 # [m]
 
 joystick:
   joystick_timer_rate: 30 # [Hz]
