--- a/config/simulation/uav_manager.yaml
+++ b/config/simulation/uav_manager.yaml
@@ -26,3 +26,11 @@ landing:
   # those two must apply simultaneously
   landing_cutoff_height:  0.75
   landing_cutoff_mass_factor:  0.5 # how much light does the drone appear to be?
+
+  disarm: true
+
+flight_timer:
+
+  enabled: true
+  rate: 1 # [Hz]
+  max_time: 10 # [s]
